--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -30,6 +30,15 @@ https://templatemo.com/tm-579-cyborg-gaming
   </head>
 
 <body>
+<!-- Google 로그인 API 스크립트 추가 -->
+<script src="https://apis.google.com/js/platform.js?apikey=AIzaSyABZcGiylkxAV0j0A3eqw-nrEbv2d8A7eg" async
+	defer></script>
+<!-- 네이버 로그인 API 스크립트 추가 -->
+<script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js"
+	charset="UTF-8"></script>
+<!-- 카카오톡 로그인 API 스크립트 추가 -->
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+	
 <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
     <div class="container">
