--- a/src/main/resources/templates/layout/member/change.html
+++ b/src/main/resources/templates/layout/member/change.html
@@ -18,7 +18,6 @@
                   <div class="change chage-section">
                      <div class="heading-section">
                         <h2>이용권 안내</h2>
-                        <h5>GUEST은 가입 후 7일간만 이용 가능해용</h5>
                      </div>
                      <div class="form-section">
                         <form th:action="@{/change}" method="post" id="change">
@@ -43,13 +42,13 @@
                                     <td>13,500원</td>
                                  </tr>
                                  <tr>
-                                    <td>모바일+태블릿+PC</td>
-                                    <td>○</td>
-                                    <td>○</td>
-                                    <td>○</td>
+                                    <td>이용기간</td>
+                                    <td>가입 후 7일</td>
+                                    <td>한달</td>
+                                    <td>한달</td>
                                  </tr>
                                  <tr>
-                                    <td>TV</td>
+                                    <td>모바일+태블릿+PC+TV</td>
                                     <td>○</td>
                                     <td>○</td>
                                     <td>○</td>
