--- a/src/main/resources/templates/layout/member/join.html
+++ b/src/main/resources/templates/layout/member/join.html
@@ -14,7 +14,7 @@
 		<!-- join page start -->
 		<div class="join">
           <div class="col-lg-8">
-			<form th:action="@{/join}" method="post" id="join" onsubmit="return go_save();" name="fr">
+			<form th:action="@{/join}" method="post" id="join" name="fr">
 			
 			<!-- *** STEP 1 *** -->
 			<div class="join step1">
@@ -28,6 +28,7 @@
 					<div class="join-form">
 						<!--action : form에 작성한 데이터를 member/join으로 보냄 -->
 						<!-- name : 서버로 전송 할 때 변수의 역할이라고 생각해줘-->
+						<input type="hidden" id="email" name="email">
 						<div class="input_block">
 							<input type="email" id="id" name="id" placeholder="yongyong@example.com">
 							<span class="join-info" id="id-message">로그인, 비밀번호 찾기, 알림에 사용되니 정확한 이메일 주소를 입력해주세요.</span>
@@ -46,31 +47,28 @@
 							<button class="ck-button" id="next-to-step2" th:style="'width: 80%'">다음</button>
 						</div>
 					</div>
+					
+					<!-- separator -->
 			
+					<div class="separator">
+						다른 서비스 계정으로 가입
+					</div>
 			
-				
-									<!-- separator -->
-								
-									<div class="separator">
-									다른 서비스 계정으로 가입
-							</div>
-							
-						<div class="social-login-buttons" style="display: flex; gap: 10px;">
-							<!-- Google 로그인 버튼 -->
-							
-							<div class="g-signin2" data-onsuccess="onSignIn" ></div>
-							
-								<!-- 네이버 로그인 버튼 -->
-								<div style="width:120px;" >
+					<div class="social-login-buttons" style="display: flex; gap: 10px;">
+						<!-- Google 로그인 버튼 -->
+			
+						<div class="g-signin2" data-onsuccess="onSignIn"></div>
+			
+						<!-- 네이버 로그인 버튼 -->
+						<div style="width:120px;">
 							<div id="naverIdLogin"></div>
-						    </div>
-							<!-- 카카오톡 로그인 버튼 -->
-							<a id="kakao-login-btn"> <img
-								src="assets/images/kakao_login.png" alt="카카오톡으로 로그인"
+						</div>
+						<!-- 카카오톡 로그인 버튼 -->
+						<a id="kakao-login-btn"> <img src="assets/images/kakao_login.png" alt="카카오톡으로 로그인"
 								style="cursor: pointer; width: 120px; height: 35px;" />
-							</a>
-
-							</div>
+						</a>
+			
+					</div>
 				</div>
 			</div>
 			<!-- *** STEP 1 END *** -->
@@ -115,18 +113,20 @@
 							</div>
 							<div class="input_block">
 								<span class="join-info">번호</span>
-								<input type="tel" name="phone_number" id="phone_number" placeholder="">
+								<input type="tel" name="phone_number" id="phone_number" placeholder="'-' 제외 11자리 입력">
 							</div>
 							
-							<div class="input_block">
-								<span class="join-info">나이</span>
-								<select name="age" id="age">
-									<option th:each="i : ${#numbers.sequence(18, 100)}" th:value="${i}" th:text="${i}"></option>
-								</select>
+							<div class="input_block age">
+								<div class="join-info">나이</div>
+								<div class="selection">
+									<select name="age" id="age">
+										<option th:each="i : ${#numbers.sequence(0, 100)}" th:value="${i}" th:text="${i}"></option>
+									</select>
+								</div>
 							</div>
-							<div>
-								이용권 안내
-							</div>
+							<br>
+							<div class="join-info" id="step3-message"></div>
+							
 							<div class="button-div">
 							  <button class="prev-button" id="prev-to-step2">Back</button>
 							  <button class="ck-button" id="next-to-step4">다음</button>
@@ -140,6 +140,73 @@
 				<div class="join step4">
 					<div class="join join-section">
 						<p>STEP 4</p>
+						<div class="heading-section">
+							<h2>이용권을 선택해주세용!</h2>
+						</div>
+						<div class="membership">
+							<div class="use-table">
+                              <table class="use" th:align="center" th:cellpadding="0" th:cellspacing="0">
+                                 <tr>
+                                    <th><input type="hidden" id="position" name="position"></th>
+                                    <th>
+										<button  class="change-use-button" type="button" id="guest-btn">GUEST</button></label>
+                                    </th>
+                                    <th>
+                                    	<button  class="change-use-button" type="button" id="basic-btn">BASIC</button></label>
+                                    </th>
+                                    <th>
+										<button  class="change-use-button" type="button" id="premium-btn">PREMIUM</button></label>
+                                    </th>
+                                 </tr>
+                                 <tr class="content">
+                                    <td>월간 이용 금액</td>
+                                    <td class="guest">0원</td>
+                                    <td class="basic">9,500원</td>
+                                    <td class="premium">13,500원</td>
+                                 </tr>
+                                 <tr class="content">
+                                    <td>이용기간</td>
+                                    <td class="guest">가입 후 7일</td>
+                                    <td class="basic">한달</td>
+                                    <td class="premium">한달</td>
+                                 </tr>
+                                 <tr class="content">
+                                    <td>모바일+태블릿+PC+TV</td>
+                                    <td class="guest">○</td>
+                                    <td class="basic">○</td>
+                                    <td class="premium">○</td>
+                                 </tr>
+                                 <tr class="content">
+                                    <td>VOD 30만편 이상</td>
+                                    <td class="guest">○</td>
+                                    <td class="basic">○</td>
+                                    <td class="premium">○</td>
+                                 </tr>
+                                 <tr class="content">
+                                    <td>영화 6천편 무제한 시청</td>
+                                    <td class="guest">X</td>
+                                    <td class="basic">X</td>
+                                    <td class="premium">○</td>
+                                 </tr>
+                              </table>
+                              
+                              <div class="join-info" id="membership-message"></div>
+                              
+                             <div class="button-div">
+							  <button class="prev-button" id="prev-to-step3">Back</button>
+							  <button class="ck-button" id="next-to-step5">다음</button>
+							</div>
+                          </div>
+                              
+						</div>
+					</div>
+				</div>
+				<!-- *** STEP 4 END *** -->
+				
+				<!-- *** STEP 5 *** -->
+				<div class="join step5">
+					<div class="join join-section">
+						<p>STEP 5</p>
 						<div class="heading-section">
 							<h2>이용약관에 동의하시면<br>
 								회원가입이 완료됩니다.
@@ -221,14 +288,14 @@
 							<div class="join-info" id="checkbox-message"></div>
 							
 							<div class="button-div">
-							  <button class="prev-button" id="prev-to-step3">Back</button>
+							  <button class="prev-button" id="prev-to-step4">Back</button>
 							  <button type="button" class="submit-button" id="submit-button">완료</button>
 							</div>
 				
 						</div>
 					</div>
 				</div>
-				<!-- *** STEP 4 END *** -->
+				<!-- *** STEP 5 END *** -->
 				
 			  </form>
 		    </div>
