--- a/src/main/resources/templates/layout/community/getBoard.html
+++ b/src/main/resources/templates/layout/community/getBoard.html
@@ -4,103 +4,117 @@
 <head>
 <title>게시글 작성</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<script type="text/javascript" th:src="@{/assets/js/community.js}"></script>
 <!-- header -->
 <th:block th:replace="fragments/header :: header"></th:block>
 </head>
 <body th:align="center">
 
-               <div class="getBoard">
-                  <div class="getBoard getBoard-section">
-                     <!-- Board 시작 -->
-                     <div class="form-section">
-                        <div class="heading-section">
-                           <h5>댓글은 로그인 후 작성 할 수 있어용</h5>
-                           <h5>비방과 욕설 스포는 삭제가 될 수 있어용</h5>
-                        </div>
-                        <div class="detail-table">
-                           <table class="getBoardDetail" >
+   <div class="getBoard">
+      <div class="getBoard getBoard-section">
+         <!-- Board 시작 -->
+         <div class="form-section">
+            <div class="heading-section">
+               <h4>댓글은 로그인 후 작성 할 수 있어용</h4>
+               <h5>비방과 욕설 스포는 삭제가 될 수 있어용</h5>
+            </div>
+            <form th:action="@{/modifyBoard}" method="post" id="modify">
+               <div class="detail-table">
+                  <table class="getBoardDetail">
+                     <tr>
+                        <td class="getBoardTitle" th:text="제목"></td>
+                        <td th:text="${board.title}" width="80" colspan="2"></td>
+                     </tr>
 
-                              <tr>
-                                 <td th:text="제목"></td>
-                                 <td th:text="${board.title}" width="80" colspan="2"></td>
-                              </tr>
-                              <tr>
-                                 <td th:text="내용"></td>
-                                 <td th:text="${board.content}" colspan="2"></td>
-                              </tr>
-                              <tr>
-                                 <td th:text="작성일"></td>
-                                 <td
-                                    th:text="${#dates.format(board.write_date, 'yyyy-MM-dd')}"></td>
-                              </tr>
-                              <tr>
-                                 <td th:text="작성자"></td>
-                                 <td th:text="${board.member.name}"></td>
-                              </tr>
-                              <tr>
-                                 <td th:text="조회수"></td>
-                                 <td th:text="${board.cnt}"></td>
-                              </tr>
-                           </table>
-                        </div>
-
-                        <!-- 댓글 시작 -->
-                        <div>
-                           <!-- 댓글 보여지기 -->
-                           <div>
-                              <form action="@{/gopost}" method="post" id="gopost" >
-                                 <div th:each="reply : ${board.replies}">
-                                    <tr>
-                                       <td id="replyContent" th:text="${reply.content}"></td>
-                                    </tr>
-                                    <tr>
-                                       <td name="replyId" id="replyId"
-                                          th:text="${reply.member.id}"></td>
-                                    </tr>
-                                 </div>
-
-                              </form>
-                           </div>
-                        </div>
-                        <!-- 댓글 작성 -->
-                        <!-- 로그인 했을때에만 작성 가능-->
-                          <div th:if="${session.member != null}">
-                      <div th:if="${board.b_category == 'qna'}">
-            			<div th:if="${session.member.position == 'ADMIN'}">
-                           <h5>댓글 작성하기</h5>
-                           <form th:action="@{/insertReply}" method="post" id="reply"
-                              th:object="${newReply}">
-                              <input type="hidden" name="b_seq" id="b_seq"
-                                 th:value="${board.b_seq}">
-                              <textarea rows="3" cols="30" id="content" name="content"></textarea>
-                              <input type="text" name="id" th:value="${session.member.id}"
-                                 readonly> <input class="reply_btn" type="submit"
-                                 value="댓글등록하기">
-                           </form>
-                        </div>
-                        </div>
-                        </div>
-                         <div th:if="${session.member != null}">
-                        <div th:unless="${board.b_category == 'qna'}">
-                           <h5>댓글 작성하기</h5>
-                           <form th:action="@{/insertReply}" method="post" id="reply"
-                              th:object="${newReply}">
-                              <input type="hidden" name="b_seq" id="b_seq"
-                                 th:value="${board.b_seq}">
-                              <textarea rows="3" cols="30" id="content" name="content"></textarea>
-                              <input type="text" name="id" th:value="${session.member.id}"
-                                 readonly> <input class="reply_btn" type="submit"
-                                 value="댓글등록하기">
-                                   
-                           </form>
-                        </div>
-                    </div>
-                     </div>
-                  </div>
+                     <tr>
+                        <td class="getBoardTitle" th:text="내용"></td>
+                        <td th:text="${board.content}" colspan="2"></td>
+                     </tr>
+                     <tr>
+                        <td class="getBoardTitle" th:text="작성일"></td>
+                        <td th:text="${#dates.format(board.write_date, 'yyyy-MM-dd')}"></td>
+                     </tr>
+                     <tr>
+                        <td class="getBoardTitle" th:text="작성자"></td>
+                        <td th:text="${board.member.name}"></td>
+                     </tr>
+                     <tr>
+                        <td class="getBoardTitle" th:text="조회수"></td>
+                        <td th:text="${board.cnt}"></td>
+                     </tr>
+                     <tr>
+                        <td class="getBoardTitle" th:text="좋아요"></td>
+                        <td><i id="like_count" class="fa fa-thumbs-up"
+                           th:text="${board.b_like}"></i> <input id="like_button"
+                           type="button" value="좋아요" onclick="likePlus()"
+                           th:if="${session.member != null}"> <input id="b_seq"
+                           type="hidden" th:value="${board.b_seq}"></td>
+                     </tr>
+                  </table>
                </div>
+               <div
+                  th:if="${session.member != null and session.member.id == board.member.id}">
+                  <input class="modify_btn" type="submit" value="수정하기">
+               </div>
+            </form>
+         </div>
+         <hr>
+
+         <!-- 댓글 시작 -->
+         <div>
+            <!-- 댓글 보여지기 -->
+            <div class="getBoard-view">
+               <form action="@{/gopost}" method="post" id="gopost">
+                  <table>
+                     <tr th:each="reply : ${board.replies}">
+                        <td th:text="${reply.content + ' - ' + reply.member.id}"></td>
+                     </tr>
+                  </table>
+               </form>
             </div>
          </div>
+         <!-- 댓글 작성 -->
+
+         <!-- 로그인 했을때에만 작성 가능-->
+         <div class="replywrite" th:if="${session.member != null}">
+            <!-- Q&A 카테고리이면서 position이 ADMIN인 경우에만 댓글 작성 폼 표시 -->
+            <div
+               th:if="${board.b_category == 'qna' and session.member.position == 'ADMIN'}">
+               <form th:action="@{/insertReply}" method="post" id="reply"
+                  th:object="${newReply}">
+                  <div class="replywrite-reply">
+                     <input type="hidden" name="b_seq" id="b_seq"
+                        th:value="${board.b_seq}">
+                     <textarea rows="3" cols="30" id="content" name="content"
+                        placeholder="악성 댓글과 스포는 싫어용."></textarea>
+                     <input type="hidden" name="id" th:value="${session.member.id}"
+                        readonly> <input class="modify_btn" type="submit"
+                        value="댓글등록하기">
+                  </div>
+               </form>
+            </div>
+            <!-- 다른 카테고리의 경우 모든 멤버에게 댓글 작성 폼 표시 -->
+            <div class="replywrite" th:if="${board.b_category != 'qna'}">
+               <form th:action="@{/insertReply}" method="post" id="reply"
+                  th:object="${newReply}">
+                  <div class="replywrite-reply">
+                     <input type="hidden" name="b_seq" id="b_seq"
+                        th:value="${board.b_seq}">
+                     <textarea rows="3" cols="30" id="content" name="content"
+                        placeholder="악성 댓글과 스포는 싫어용."></textarea>
+                     <input type="hidden" name="id" th:value="${session.member.id}"
+                        readonly><br> <input class="modify_btn"
+                        type="submit" value="댓글등록하기">
+                  </div>
+               </form>
+            </div>
+
+         </div>
       </div>
+   </div>
+
+
 </body>
 <th:block th:replace="fragments/footer :: footer"></th:block>
 </html>
