--- a/src/main/resources/templates/layout/community/insertBoard.html
+++ b/src/main/resources/templates/layout/community/insertBoard.html
@@ -6,10 +6,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!-- header -->
 <th:block th:replace="fragments/header :: header"></th:block>
-   <script type="text/javascript" th:src="@{/assets/js/community.js}"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+   
 </head>
 <body th:align="center">
-
+<script type="text/javascript" th:src="@{/assets/js/community.js}"></script>
    <div class="container">
       <div class="row">
          <div class="col-lg-12">
@@ -32,7 +33,7 @@
                                  <tr>
                                     <td>카테고리</td>
                                     <td><select id="b_category" name="b_category">
-                                          <option placeholder="선택해주세요."></option>
+                                          <option th:text="선택해주세요." ></option>
                                           <option th:value="qna">Q&A</option>
                                           <option th:value="talk">수다</option>
                                           <option th:value="review">후기</option>
