12/19 관리자-TV등록,수정 에피소드 등록, 수정부분 구현

--- a/src/main/resources/templates/layout/admin/insertEpisode.html
+++ b/src/main/resources/templates/layout/admin/insertEpisode.html
@@ -25,7 +25,7 @@
 										<td><input type="text" name="episode_num" id="episode_num"
 											placeholder="회차를 입력해주세요."></td>
 									</tr>
-									
+									<tr>
 										<td>회차별 제목</td>
 										<td><input type="text" name="ep_title" id="ep_title"
 											placeholder="제목을 입력해주세요."></td>
@@ -34,12 +34,12 @@
 									<tr>
 										<td>방영날짜</td>
 										<td><input type="date" name="airing_date"
-											id="airing_date" placeholder="방영날짜를 입력해주세요."></textarea></td>
+											id="airing_date" placeholder="방영날짜를 입력해주세요."></td>
 									</tr>
 									<tr>
 										<td>방영시간</td>
 										<td><input type="text" name="running_time"
-											id="running_time" placeholder="방영시간을 입력해주세요."> </textarea></td>
+											id="running_time" placeholder="방영시간을 입력해주세요."></td>
 									</tr>
 									<tr>
 										<td>줄거리</td>
@@ -49,7 +49,7 @@
 									<tr>
 									<td>영상주소</td>
 										<td><input type="text" name="video_path" id="video_path"
-											placeholder="영상주소를 입력해주세요."> </textarea></td>
+											placeholder="영상주소를 입력해주세요."></td>
 									</tr>
 									<!-- 이미지 및 배너 업로드 필드 추가 -->
 								</table>
