--- a/src/main/resources/templates/layout/admin/getTVProgram.html
+++ b/src/main/resources/templates/layout/admin/getTVProgram.html
@@ -1,80 +1,85 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-    <body>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="page-content">
-            
-                 <img th:src="@{'/assets/images/tv/' + ${tvProgram.banner_path}}" alt="">
-            
-                 <!-- ***** image End ***** -->
-			<!-- detail information -->
-			<div class="detail-table">
-				<table>
-					<tr>
-						<td class="em" th:text="${tvProgram.p_title}" width="80" colspan="2"></td>
-					</tr>
-					<tr>
-						<td th:text="${tvProgram.description}" colspan="2"></td>
-					</tr>
-					<tr>
-						<td class="em" th:text="개요"></td>
-						<td th:text="${tvProgram.nation} + ', ' + ${tvProgram.airing_period}"></td>
-					</tr>
-					<tr>
-						<td class="em" th:text="장르"></td>
-						<td th:text="${tvProgram.p_category}"></td>
-					</tr>
-					<tr>
-						<td class="em" th:text="출연"></td>
-						<td th:text="${tvProgram.p_cast}"></td>
-					</tr>
-					<tr>
-						<td class="em" th:text="감독"></td>  
-						<td th:text="${tvProgram.p_director}"></td>
-					</tr>
-					<tr>
-						<td class="em" th:text="등급"></td>
-						<td th:text="${tvProgram.rating}"></td>
-					</tr>
-				</table>
-         
-            </div>
-            	<a th:href="@{/updateTVProgram}">수정하기</a>
-            	<a th:href="@{/deleteTVProgram}">삭제하기</a>
-            	<a th:href="@{/insertEpisode(pseq=${tvProgram.pseq})}">회차정보 등록하기</a>
-             </div>
-          </div>
-        </div>
-      </div>
-      
-       <!-- episope -->
-            <div class="episode-table">
-            	<table>
-            		<tr th:each="epi, state : ${epiList}">
-            			<div class="episode">
-							<div class="ep-info">
-															
-							    <h5 th:text="${epi.ep_title}"></h5>
-							    <div class="ep">
-									<p th:text="${epi.running_time}"></p>
-									<!--<p th:text="${epi.airing_date}"></p>-->
-									<p th:text="${#dates.format(epi.airing_date, 'yyyy-MM-dd')}"></p>
-								 </div>
-								<span th:text="${epi.description}" class="ep-desc"></span>
-								</a>
-							</div>
+<body>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="page-content">
+
+					<img th:src="@{'/assets/images/tv/' + ${tvProgram.banner_path}}"
+						alt="">
+
+					<!-- ***** image End ***** -->
+					<!-- detail information -->
+					<div class="detail-table">
+						<table>
+							<tr>
+								<td class="em" th:text="${tvProgram.p_title}" width="80"
+									colspan="2"></td>
+							</tr>
+							<tr>
+								<td th:text="${tvProgram.description}" colspan="2"></td>
+							</tr>
+							<tr>
+								<td class="em" th:text="개요"></td>
+								<td
+									th:text="${tvProgram.nation} + ', ' + ${tvProgram.airing_period}"></td>
+							</tr>
+							<tr>
+								<td class="em" th:text="장르"></td>
+								<td th:text="${tvProgram.p_category}"></td>
+							</tr>
+							<tr>
+								<td class="em" th:text="출연"></td>
+								<td th:text="${tvProgram.p_cast}"></td>
+							</tr>
+							<tr>
+								<td class="em" th:text="감독"></td>
+								<td th:text="${tvProgram.p_director}"></td>
+							</tr>
+							<tr>
+								<td class="em" th:text="등급"></td>
+								<td th:text="${tvProgram.rating}"></td>
+							</tr>
+						</table>
+
+					</div>
+					<a th:href="@{'/updateTVProgram?pseq=' + ${tvProgram.pseq}}">수정하기</a>
+					<a th:href="@{/deleteTVProgram}">삭제하기</a> <a
+						th:href="@{/insertEpisode(pseq=${tvProgram.pseq})}">회차정보 등록하기</a>
+						<a th:href="@{/contentsList}">목록으로</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- episope -->
+	<div class="episode-table">
+		<table>
+			<tr th:each="epi, state : ${epiList}">
+				<div class="episode">
+					<div class="ep-info">
+
+						<h5 th:text="${epi.ep_title}"></h5>
+						<div class="ep">
+							<p th:text="${epi.running_time}"></p>
+							<!--<p th:text="${epi.airing_date}"></p>-->
+							<p th:text="${#dates.format(epi.airing_date, 'yyyy-MM-dd')}"></p>
 							
 						</div>
-            		</tr>
-            	</table>
-            	<div class="toggle-btn">
-	            	<buttton class="showmore" id="showmore">더보기</buttton>
-	            	<buttton class="close" id="close">닫기</buttton>
-            	</div>
-            </div>
-    </body>
-    
-</html>  
+						<span th:text="${epi.description}" class="ep-desc"></span>
+						<div>
+							<a th:with="episodeNum=${epi.episode_num}"
+								th:href="@{'/updateEpisode?pseq=' + ${epi.tvProgram.pseq} + '&episode_num=' + ${episodeNum}}">수정하기</a>
+						</div>
+						<div class="hover-effect"></div>
+					</div>
+			</tr>
+		</table>
+	
+	</div>
+</body>
+
+</html>
