--- a/src/main/resources/templates/layout/contents/moviedetail.html
+++ b/src/main/resources/templates/layout/contents/moviedetail.html
@@ -8,7 +8,7 @@
             <div class="page-content">
 				
              <!-- ***** image Start ***** -->
-             <div class="feature-banner" 
+             <div class="feature-banner movie" 
                   th:style="'background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), 
                   url(\'/assets/images/movie/' + ${movie.banner_path} + '\')'">
                <div class="row">
