--- a/src/main/resources/templates/layout/admin/adminPage.html
+++ b/src/main/resources/templates/layout/admin/adminPage.html
@@ -75,7 +75,7 @@
 						<div class="col-xl-6">
 							<div class="card mb-4">
 								<div class="card-header">
-									<i class="fas fa-chart-area me-1"></i> 전체 계시물
+									<i class="fas fa-chart-area me-1"></i> 전체 게시물
 								</div>
 								<div class="card-body">
 									<canvas id="myAreaChart" width="100%" height="40"></canvas>
